Python Port of the demo

--- a/EngVision.AppHost/EngVision.AppHost.csproj
+++ b/EngVision.AppHost/EngVision.AppHost.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.NodeJs" Version="9.5.2" />
+    <PackageReference Include="Aspire.Hosting.Python" Version="13.1.2" />
   </ItemGroup>
 
   <PropertyGroup>
