--- a/EngVision.AppHost/appsettings.json
+++ b/EngVision.AppHost/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning",
       "Aspire.Hosting.Dcp": "Warning"
     }
-  }
+  },
+  // Toggle API backend: "dotnet" (default) or "python"
+  "ApiBackend": "dotnet"
 }
